# npcv-c

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README  README.md
doc/doxygen/docs/: _image_8h.html  _image_8h_source.html  _image_stream_8h.html  _image_stream_8h_source.html  annotated.html  classes.html  classification__image__utils_8h.html  classification__image__utils_8h_source.html  classnputils_1_1_image_stream-members.html  classnputils_1_1_image_stream.html  datatypes_8h.html  datatypes_8h_source.html  dcomments_8h.html  dcomments_8h_source.html  debug_8h.html  debug_8h_source.html  dir_10311f2de3e3b115c3c702b74e331c97.html  dir_1519913b2bfcea3841163cb4970028f2.html  dir_4c9e429982ce7c371700b9de362bf8e9.html  dir_c2fe04be159eb2f1f223db52546ce088.html  dir_e914ee4d4a44400f1fdb170cb4ead18a.html  edge__detection_8h.html  edge__detection_8h_source.html  example_test_8cpp-example.html  examples.html  file__ops_8h.html  file__ops_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  group__classification.html  group__core.html  group__imageproc.html  group__utils.html  (+49 more)
doc/doxygen/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+40 more)
examples/: CMakeLists.txt  ExamplesDatas.h  ExamplesManager.cpp
examples/datas/output/old/classified/test1/: 0.csv  0clean.csv  1.csv  1clean.csv  2.csv  2clean.csv  3.csv  3clean.csv  4.csv  4clean.csv  params.txt
examples/datas/output/valid_results/: FileWriteOutput.txt
include/: dcomments.h
include/base/classification/: classification_image_utils.h  image_classification.h
include/base/core/: Image.h  datatypes.h  debug.h  list.h  mathn.h  memory.h  npfile.h  npio.h  npmath.h  npmemory.h  npstdlib.h  npstring.h  ntime.h  pixel.h
include/base/imageproc/: convolution_matrix.h  edge_detection.h  image.h  imageproc_gray.h  npimage_utils.h  npimageproc.h  pixel.h
include/base/utils/: ImageStream.h  file_ops.h  nputils.h  path_utils.h
include/classification/: image_classification.h
include/core/: pixel.h
include/utils/: ImageStream.h
npcv/: CMakeLists.txt  README
npcv/examples/: ExamplesDatas.h  ExamplesManager.cpp
npcv/examples/datas/output/old/classified/test1/: 0.xlsx  1.xlsx  4.xlsx
npcv/examples/datas/output/valid_results/: ocrSamples.csv
npcv/include/classification/: classification_image_utils.h
npcv/include/core/: Image.h  datatypes.h  debug.h  file_ops.h  list.h  memory.h  npio.h  npstdlib.h  npstring.h
npcv/include/imageproc/: edge_detection.h
npcv/include/utils/: CMakeLists.txt  FileCSV.h  ImageStream.h  path_utils.h
npcv/include/utils/imageproc/: edge_detection.h  imageproc_gray.h
npcv/lib/stb/: stb_image.h
npcv/src/: CMakeLists.txt
npcv/src/classification/: CMakeLists.txt  classification_image_utils.cpp  classification_image_utils.h
npcv/src/classification/intern/: classification_image_utils.cpp  image_classification.cpp
npcv/src/core/: CMakeLists.txt  Image.cpp  Image.h  debug.cpp  npio.cpp  npstdlib.cpp  npstring.cpp  ntime.cpp  pixel.cpp  pixel.h  string.cpp
npcv/src/core/intern/: Image.cpp  pixel.cpp
npcv/src/core/intern/npstdlib/: debug.cpp  list.cpp  mathn.cpp  npio.cpp  npstdlib.cpp  npstring.cpp  string.cpp
npcv/src/core/npstdlib/: datatypes.h  debug.h  list.h  memory.h  npio.h  npstdlib.h  npstring.h  string.h
npcv/src/imageproc/: EdgeDetection.cpp  ImageProc_Gray.cpp  imageproc_gray.h
npcv/src/imageproc/intern/: EdgeDetection.cpp  ImageProc_Gray.cpp
npcv/src/utils/: CMakeLists.txt  FileCSV.cpp  FileCSV.h  ImageStream.cpp  file_ops.cpp  file_ops.h  path_utils.cpp
npcv/src/utils/classification/: image_classification.cpp
npcv/src/utils/imageproc/: CMakeLists.txt  EdgeDetection.cpp
npcv/src/utils/intern/: FileCSV.cpp  ImageStream.cpp  file_ops.cpp
npcv/test/: CMakeLists.txt  DataTest.h  TestManager.cpp  gtest_main.cc
npcv/test/Datas/: .gitignore  log.txt
npcv/test/Datas/TestOutput/old/classified/test1/: 2.xlsx  3.xlsx
nvsdk/: CMakeLists.txt  CMakeLists2.txt
nvsdk/include/: CMakeLists.txt  Image.h
nvsdk/include/core/: mathn.h  memory.h  npstdlib.h  pixel.h  string.h
nvsdk/include/utils/classification/: image_classification.h
nvsdk/src/: CMakeLists.txt  Image.cpp  ImageStream.cpp
nvsdk/src/core/: file_ops.cpp  list.cpp  mathn.cpp  npstdlib.cpp  pixel.cpp  xprintf.c
nvsdk/src/utils/imageproc/: ImageProc_Gray.cpp
nvsdk/test/: DataTest.h
src/: CMakeLists.txt
src/base/classification/: CMakeLists.txt  classification_image_utils.cc  classification_image_utils.cpp  image_classification.cc  image_classification.cpp
src/base/core/: CMakeLists.txt  Image.cpp  debug.cc  debug.cpp  file.cc  io.cc  list.cc  list.cpp  math.cc  mathn.cc  mathn.cpp  memory.cc  npio.cpp  npstring.cpp  ntime.cpp  pixel.cpp  stdlib.cc  string.cc  test.cc  time.cc
src/base/imageproc/: CMakeLists.txt  EdgeDetection.c  EdgeDetection.cc  EdgeDetection.cpp  ImageProc_Gray.c  ImageProc_Gray.cc  ImageProc_Gray.cpp  convolution_matrix.cc  image.cc  image.cpp  image_utils.cc  pixel.cc  pixel.cpp  test.cc
src/base/utils/: CMakeLists.txt  ImageStream.cpp  file_ops.cpp  path_utils.cc  path_utils.cpp  test.cc
src/classification/: image_classification.cpp
src/core/: Image.cpp  list.cpp
src/imageproc/: CMakeLists.txt  EdgeDetection.cpp
src/nppcv/: CMakeLists.txt
src/utils/: CMakeLists.txt  ImageStream.cpp
test/: CMakeLists.txt  core_gtest.cc  gtest_main.cc  utils_gtest.cc
